--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,3 @@
-/* all pages */
-html {
-  box-sizing: border-box;
-}
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-h1,
-h2,
-h3,
-ul,
-p {
-  padding: 0;
-  margin: 0;
-}
-img {
-  display: block;
-}
 :root {
   --lite-bg: #ffffff;
   --midl-bg: #f5f4fa;
@@ -27,8 +7,21 @@ img {
   --elements: #2196f3;
   --foter-gray: rgba(255, 255, 255, 0.6);
 }
-* {
+h2,
+h3 {
+  color: var(--title);
+}
+
+/* * {
   outline: 1px solid black;
+} */
+
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 body {
   background-color: var(--lite-bg);
@@ -37,38 +30,47 @@ body {
   color: var(--text);
 }
 
-a {
-  text-decoration: none;
-}
-
-ul {
-  list-style: none;
-}
-h2,
-h3 {
-  color: var(--title);
-}
-
 .hero,
 footer {
   background: var(--dark-bg);
   color: var(--lite-bg);
 }
+
 /* nav */
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #ececec;
+}
 .logo {
+  padding-top: 24px;
+  padding-bottom: 25px;
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 26px;
   line-height: 1.2;
   color: var(--elements);
+  margin-right: 93px;
+}
+nav {
+  display: flex;
+  align-items: center;
 }
 nav .logo span {
   color: #000000;
 }
-.nav-linc:link {
+.nav-items {
+  display: flex;
+}
+.nav-item:link {
   color: var(--title);
 }
-.nav-linc {
+.nav-item {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  margin-right: 50px;
   color: var(--title);
   font-style: normal;
   font-weight: 500;
@@ -76,15 +78,21 @@ nav .logo span {
   line-height: 1.14;
   letter-spacing: 0.02em;
 }
-.nav-linc:hover,
-.nav-linc:focus,
-.nav-linc.current,
+.nav-item:hover,
+.nav-item:focus,
+.nav-item.current,
 .nav-contact:hover {
   color: var(--elements);
 }
 
 /* nav contact */
+.contacts {
+  display: flex;
+  margin-left: auto;
+}
 .nav-contact {
+  margin-left: 50px;
+  display: block;
   color: var(--text);
   font-style: normal;
   font-weight: 500;
@@ -94,22 +102,37 @@ nav .logo span {
 }
 
 /* footer */
+footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+footer h2 {
+  display: none;
+}
 footer .logo span {
   color: var(--lite-bg);
+  margin-bottom: 20px;
 }
 address {
+  display: inline-block;
   font-style: normal;
 }
 address a {
+  margin-top: 9px;
+  display: inline-block;
   font-style: normal;
   color: var(--foter-gray);
 }
 
 /* studio page */
+
 .hero {
   text-align: center;
+  height: 600px;
+  padding-top: 200px;
 }
 .hero h1 {
+  margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -117,6 +140,10 @@ address a {
   text-transform: uppercase;
 }
 .hero button {
+  padding: 10px 32px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: 0px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -124,8 +151,20 @@ address a {
   background-color: var(--elements);
   color: var(--lite-bg);
 }
+
+.advantages {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.advantages h2 {
+  display: none;
+}
 .advantages ul {
   display: flex;
+  justify-content: space-between;
+}
+.advantages li {
+  max-width: 270px;
 }
 .advantages h3 {
   font-weight: bold;
@@ -135,10 +174,18 @@ address a {
   text-transform: uppercase;
 }
 .advantages p {
+  margin-top: 10px;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+}
+
+.working-moments ul {
+  margin-top: 50px;
+  margin-bottom: 94px;
+  display: flex;
+  justify-content: space-between;
 }
 .working-moments h2 {
   font-weight: 700;
@@ -147,14 +194,21 @@ address a {
   text-align: center;
   letter-spacing: 0.03em;
 }
+
 .our-team {
   background-color: var(--midl-bg);
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 .our-team ul {
+  margin-top: 50px;
   display: flex;
+  justify-content: space-between;
 }
 .our-team li {
   background-color: var(--lite-bg);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
 }
 .our-team h2 {
   font-weight: 700;
@@ -163,7 +217,11 @@ address a {
   text-align: center;
   letter-spacing: 0.03em;
 }
+.our-team img {
+  margin-bottom: 30px;
+}
 .our-team h3 {
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.17;
@@ -171,17 +229,36 @@ address a {
   letter-spacing: 0.03em;
 }
 .our-team p {
+  margin-bottom: 30px;
+  text-align: center;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
 }
+
 /* Portfolio page */
+
+.our-works {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.our-works h1 {
+  display: none;
+}
 .our-works .sorter {
   display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
+}
+.sorter li:not(:last-child) {
+  margin-right: 8px;
 }
 .sorter button {
+  padding: 6px 22px;
+  border: 0px;
+  border-radius: 4px;
   background-color: var(--midl-bg);
 }
 .sorter button:hover,
@@ -193,13 +270,30 @@ address a {
   display: flex;
   flex-wrap: wrap;
 }
+.our-works .items li {
+  max-width: 370px;
+  border: 1px solid #eeeeee;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.our-works .items li:nth-child(3n) {
+  margin-right: 0px;
+}
+.our-works .items li:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
 .items h2 {
+  margin-top: 20px;
+  margin-left: 24px;
+  margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
 }
 .items p {
+  margin-left: 24px;
+  margin-bottom: 20px;
   font-weight: normal;
   font-size: 16px;
   line-height: 1.87;
