Добавил рамку хедер

--- a/css/style.css
+++ b/css/style.css
@@ -38,10 +38,12 @@ footer {
 
 /* nav */
 header {
+  border-bottom: 1px solid #ececec;
+}
+header .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid #ececec;
 }
 .logo {
   padding-top: 24px;
