--- a/css/style.css
+++ b/css/style.css
@@ -308,3 +308,12 @@ address a {
   letter-spacing: 0.03em;
   color: var(--text);
 }
+
+/* Контакты */
+.contact {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 300px;
+  padding-bottom: 300px;
+}
